k8s/whoami/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 1
  template:
    metadata:
      labels:
        app: whoami
        backstage.io/kubernetes-id': <BACKSTAGE_ENTITY_NAME>
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        startupProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
        ports:
        - name: web
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  type: LoadBalancer
  selector:
    app: whoami
  ports:
  - name: http
    port: 80
    targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.k8s.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  whoami
                port:
                  number: 80
